add code of conduct

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -189,12 +189,12 @@
 
 \section{Voting} \label{sec:voting}
 \begin{enumerate}
-    \item \label{itm:tellers} Voting will be conducted by secret ballot. Each ballot should be in
+    \item Voting will be conducted by secret ballot. Each ballot should be in
         the form of a ranked list of candidate names or the word ``abstain''.
         Any other text will count as a vote of no confidence.
-    \item Votes shall be counted by the Teller, who shall be either the Chapter
-        Advisor, the Advisor's designee, or a current or former member of the
-        Executive Board who is not running for a position.
+    \item \label{itm:tellers} Votes shall be counted by the Teller, who shall be
+        either the Chapter Advisor, the Advisor's designee, or a current or
+        former member of the Executive Board who is not running for a position.
     \item Absentee ballots will be accepted in the form of written communication
         in the form of an ordered list of names, the word ``abstain'' or ``no
         confidence'' in descending order for each office. This written
@@ -207,11 +207,17 @@
 \begin{enumerate}
     \item The Chapter Advisor shall be selected by the Executive Board with the
         aid of the University and shall be approved by both a 2/3rds majority of
-        the voting membership and the ACM.
+        the voting membership as well as the ACM.
     \item The Advisor will not have voting privileges in any matters.
     \item The Advisor will act as a consultant in matters before the Chapter.
     \item The Advisor may attend meetings and activities of the Chapter as seen
         fit and is entitled to all notifications given to members.
+\end{enumerate}
+
+\chapter{Code of Conduct}
+\begin{enumerate}
+    \item All participants in Chapter activities must follow the University Code
+        of Conduct at all times.
 \end{enumerate}
 
 \chapter{Parliamentary Authority}
