clarifications and grammar
boolean logic is fun

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -31,7 +31,9 @@
 \begin{enumerate}
     \item This organization shall be known as the Worcester Polytechnic
         Institute Chapter of the Association for Computing Machinery, hereafter
-        referred to as "the Club", or "Chapter"
+        referred to as ``the Club'', or ``Chapter''.
+    \item The Chapter is chartered by the Association for Computing Machinery,
+        hereafter referred to as ``ACM''.
     \item The purpose of the Club shall be to:
         \begin{enumerate}
             \item Promote increased knowledge of the science, design,
@@ -54,25 +56,25 @@
         \subitem Associate members are any members who do not meet the
         requirements for Active membership.
         \subitem Active members are any members who, within the last
-        term, attended at least three Chapter events and has been
-        approved by the Executive Board.
+        term, attended at least three Chapter events.
         \subitem Away members are members who have been granted such status by
         the executive board, subject to \cref{itm:awaystatus} of this section.
     \item \label{itm:associate} Any member of the WPI community may become an
-        Associate Member by demonstrating an interest in the Chapter or its
+        associate member by demonstrating an interest in the Chapter or its
         purpose.
-    \item \label{itm:activation} An Associate member can only be made an Active
-        member by the Executive Board.
-    \item \label{itm:deactivation} An Active member may be deactivated (made
-        into an Associate member) by the Executive Board if said member no
-        longer meets the requirements for active status as specified in this
-        section.
+    \item \label{itm:activation} An associate member shall automatically become
+        an active member upon fulfilling the requirements listed in
+        \cref{itm:memberclasses} of this section.
+    \item \label{itm:deactivation} An active member may be deactivated (made
+        into an associate member) by the Executive Board if said member no
+        longer meets the requirements for active status as specified in
+        \cref{itm:memberclasses} of this section.
     \item \label{itm:expulsion} If a member's actions are determined to have
         been detrimental to the Chapter, the Executive Board may revoke said
-        member's membership.
-    \item \label{itm:awaystatus} An Active member who will be absent from the
+        member's membership by a simple majority vote of the Board.
+    \item \label{itm:awaystatus} An active member who will be absent from the
         University for off-campus academic activity may petition the Executive
-        Board for Away status. Members on ``away status'' are exempt from the
+        Board for away status. Members on away status are exempt from the
         active member requirements.
 \end{enumerate}
 
@@ -84,28 +86,39 @@
         shall be referred to as the ``voting membership''.
 \end{enumerate}
 
+\section{Duties of Membership}
+\begin{enumerate}
+    \item All members shall at all times uphold all University and Chapter
+        policies, in letter and spirit. All members shall hold themselves to the
+        ACM Code of Ethics.
+\end{enumerate}
+
 \chapter{Executive Board}
 \section{Officers}
 \begin{enumerate}
     \item The officers of the Chapter shall be President, Vice-President,
         Secretary, Treasurer, Events Coordinator, Public Relations Chair, and
         System Administrator.
-    \item All officers must be student members of the international ACM and of
+    \item The Executive Board shall be composed of all Officers, the Advisor,
+        and any appointed positions as determined by the Officers and the
+        Advisor.
+    \item All officers must be student members of the ACM and active members of
         the Chapter.
     \item Officers shall be elected at the annual Election Meeting. Officers
-        shall take office immediately after the Election Meeting and serve until
-        the end of the next Election Meeting.
-    \item Any one member may not serve as President or Vice-President for more
+        shall take office at the second meeting of the Executive Board following
+        the Election Meeting and serve until the second Executive Board meeting
+        following the next Election Meeting.
+    \item No one member shall serve as President or Vice-President for more
         than two consecutive years.
     \item A minimum of two Hackathon Managers are required each year. The
         President and Vice-President can appoint more than two by mutual
         agreement.
     \item Any officer may resign their position by submitting written notice to
-        the Executive Board. A special election must then be conducted to fill
-        the vacancy.
+        the Executive Board.
     \item In the event the Presidency is vacated, the Vice-President will
         succeed automatically.
-    \item Officers may be removed by a 2/3rds majority of the Executive Board.
+    \item Officers may be removed by a 2/3rds majority of either the Executive
+        Board or the voting membership 
 \end{enumerate}
 
 \section{Duties of Officers}
@@ -116,13 +129,14 @@
         responsible for representing the organization in all communications and
         meetings with the WPI Computer Science Department.
     \item The Vice-President is responsible for assisting the President in
-        carrying out their duties.
+        carrying out their duties, and taking over for the President as
+        required.
     \item The Secretary shall keep minutes of all meetings of the Chapter. They
         shall prepare the Annual Chapter Report prior to the annual Election
-        meeting, and present it at said meeting. They shall keep an accurate
-        record of membership, and notify the membership of events and meetings.
-        They shall keep CampusGroups up to date with events, members, and
-        officers.
+        meeting, and present it at said meeting. They shall submit the Annual
+        Report to the ACM. They shall keep an accurate record of membership, and
+        notify the membership of events and meetings. They shall keep
+        CampusGroups up to date with events, members, and officers.
     \item The Treasurer shall collect dues and maintain financial records. They
         shall make the annual report of the Chapter's finances to the Secretary
         for inclusion in the Annual Report. They shall represent the Chapter to
@@ -140,32 +154,67 @@
         maintaining and posting on all social media platforms used by the
         Chapter. They are responsible for logos, branding, and merchandise.
     \item The System Administrator shall be responsible for maintaining the
-        Chapter website, Mirror service, and all other infrastructure-related
-        matters.
+        Chapter website, mirror service, and all other infrastructure-related
+        matters. They shall represent the Chapter in communications with the
+        WPI Computer Science Department when said communications relate to
+        Chapter infrastructure. They shall also set policies for the use of
+        Chapter infrastructure with the assistance of the Executive Board.
 \end{enumerate}
 
 \section{Committees}
 \begin{enumerate}
     \item The Executive Board shall have the power to create and dissolve such
         committees as they see fit.
-    \item Notwithstanding the above section, the Hackathon Committee must always
+    \item Notwithstanding the above section, the Hackathon Committee shall always
         exist. The Hackathon Committee is chaired by the Hackathon Managers, and
         is responsible for the execution of the annual Hackathon.
     \item The President is considered an \emph{ex offico} member of all
         committees.
 \end{enumerate}
 
+\section{Interim Officers}
+\begin{enumerate}
+    \item An office can become vacant through either an Officer being granted
+        away status, an Officer submitting their resignation, or an Officer is
+        removed from office by the Executive Board or the membership.
+    \item A vacancy shall be filled by a Special Election as described in
+        \cref{sec:specialelections}.
+    \item The Interim Officer shall hold office until the Officer on away status
+        returns, the annual Election Meeting, or the Interim Officer submitting
+        their resignation, whichever comes first.
+\end{enumerate}
+
+\section{Appointed Positions}
+\begin{enumerate}
+    \item The Executive Board shall have the power to create and dissolve
+        appointed positions as they see fit.
+    \item Appointed positions shall be filled by active members as described in
+        \cref{sec:memberclasses} \cref{itm:memberclasses}. Active members may be
+        appointed to or removed from positions at the discretion of the
+        Executive Board.
+\end{enumerate}
+
 \chapter{Meetings}
 \begin{enumerate}
-    \item Chapter Meetings shall be held at least three times per term, as
+    \item Chapter meetings shall be held at least three times per term, as
         determined by the Events Coordinator.
-    \item The Annual Election Meeting shall be held as the second to last
+    \item The annual Election Meeting shall be held as the second to last
         meeting of C term. This meeting will consist of the election of all
         officers, and the presentation of the Annual Report by the Secretary.
     \item The Executive Board shall hold weekly planning meetings. These
         meetings should nominally be open to active members.
         \subitem The Executive Board may move to an executive session containing
-        only current officers and the Advisor following a motion by an officer.
+        only current officers and the Advisor following a successful motion by
+        an officer. Executive sessions may invite additional people at the
+        discretion of the Executive Board.
+    \item Notification of Chapter meetings and activities shall be distributed
+        to the membership no later than 24 hours prior to the start of the
+        meeting of activity.
+    \item For the purposes of conducting votes, a quorum shall be defined as
+        greater than 50\% of the voting membership for business meetings, or
+        greater than 50\% of the Executive Board for planning meetings. A quorum
+        may be composed of members in-person, present via absentee ballot,
+        present via online meeting, or any combination of the above.
 \end{enumerate}
 
 \chapter{Elections}
@@ -180,7 +229,8 @@
 \section{Nominations}
 \begin{enumerate}
     \item Nominations for elections shall be solicited from the voting
-        membership for the two weeks prior to the Annual Election Meeting.
+        membership by the Executive Board for the two weeks prior to the Annual
+        Election Meeting. 
     \item Nominees must either accept or decline their nomination by the start
         of the Election Meeting.
     \item In the event that a position receives only one nomination, a
@@ -189,18 +239,29 @@
 
 \section{Voting} \label{sec:voting}
 \begin{enumerate}
-    \item Voting will be conducted by secret ballot. Each ballot should be in
+    \item Voting shall be conducted by secret ballot. Each ballot should be in
         the form of a ranked list of candidate names or the word ``abstain''.
-        Any other text will count as a vote of no confidence.
+        Any other text shall count as a vote of no confidence.
     \item \label{itm:tellers} Votes shall be counted by the Teller, who shall be
         either the Chapter Advisor, the Advisor's designee, or a current or
-        former member of the Executive Board who is not running for a position.
-    \item Absentee ballots will be accepted in the form of written communication
+        former member of the Executive Board who is not otherwise participating
+        in the election.
+    \item Absentee ballots may be accepted in the form of written communication
         in the form of an ordered list of names, the word ``abstain'' or ``no
         confidence'' in descending order for each office. This written
         communication shall be submitted to the Teller in accordance with
         \cref{itm:tellers} of this section.
+        \subitem If an absentee ballot contains names that have not yet been
+        nominated, the Teller shall make a nomination on the absentee's behalf.
     \item Votes will be counted according to the method of Ranked Choice Voting.
+\end{enumerate}
+
+\section{Special Elections} \label{sec:specialelections}
+\begin{enumerate}
+    \item Special Elections shall be conducted as in \cref{sec:voting}, except
+        that nominations shall take place in the same meeting as voting.
+    \item Special Elections shall be conducted at the first Chapter meeting
+        following the vacancy.
 \end{enumerate}
 
 \chapter{Advisor}
