--- a/bylaws.tex
+++ b/bylaws.tex
@@ -38,11 +38,11 @@
         \begin{enumerate}
             \item Promote increased knowledge of the science, design,
                 development, construction, languages, and applications of modern
-                computing machinery
+                computing machinery.
             \item Promote a greater interest in computing machinery and its
-                applications
+                applications.
             \item Provide a means of communication between persons having
-                interest in computing machinery
+                interest in computing machinery.
         \end{enumerate}
 \end{enumerate}
 
@@ -52,7 +52,7 @@
     \item Any member of the WPI community as defined by the University is
         eligble for membership.
     \item \label{itm:memberclasses} There shall be three classes of membership in the Chapter: Associate,
-        Active, and Away.
+        Active, Away, and Alumni.
         \subitem Associate members are any members who do not meet the
         requirements for Active membership.
         \subitem Active members are any members who, within the last
@@ -73,15 +73,18 @@
         been detrimental to the Chapter, the Executive Board may revoke said
         member's membership by a simple majority vote of the Board.
     \item \label{itm:awaystatus} An active member who will be absent from the
-        University for off-campus academic activity may petition the Executive
+        University for a defined period of time may petition the Executive
         Board for away status. Members on away status are exempt from the
         active member requirements.
+    \item \label{itm:memberalumni} An active member who leaves the University by
+        any means shall be automatically reclassified as an Alumni member.
 \end{enumerate}
 
 \section{Privileges of Membership}
 \begin{enumerate}
     \item Associate and active members are allowed access to Chapter
-        infrastructure at the discretion of the System Administrator.
+        infrastructure following policies set by the Executive Board under
+        \cref{sec:policies}.
     \item Active members may vote on all issues before the Club. These members
         shall be referred to as the ``voting membership''.
 \end{enumerate}
@@ -91,6 +94,8 @@
     \item All members shall at all times uphold all University and Chapter
         policies, in letter and spirit. All members shall hold themselves to the
         ACM Code of Ethics.
+    \item All members shall follow in letter and spirit any policies established
+        by the Executive Board under \cref{sec:policies}.
 \end{enumerate}
 
 \chapter{Executive Board}
@@ -118,7 +123,7 @@
     \item In the event the Presidency is vacated, the Vice-President will
         succeed automatically.
     \item Officers may be removed by a 2/3rds majority of either the Executive
-        Board or the voting membership 
+        Board or the voting membership. 
 \end{enumerate}
 
 \section{Duties of Officers}
@@ -175,8 +180,8 @@
 \section{Interim Officers}
 \begin{enumerate}
     \item An office can become vacant through either an Officer being granted
-        away status, an Officer submitting their resignation, or an Officer is
-        removed from office by the Executive Board or the membership.
+        away status, an Officer submitting their resignation, or an Officer
+        being removed from office by the Executive Board or the membership.
     \item A vacancy shall be filled by a Special Election as described in
         \cref{sec:specialelections}.
     \item The Interim Officer shall hold office until the Officer on away status
@@ -192,6 +197,17 @@
         \cref{sec:memberclasses} \cref{itm:memberclasses}. Active members may be
         appointed to or removed from positions at the discretion of the
         Executive Board.
+    \item Officers may delegate some of their powers and responsibilities to
+        appointed positions as they see fit.
+\end{enumerate}
+
+\section{Policies}
+\label{sec:policies}
+\begin{enumerate}
+    \item The Executive Board may create and publish policies to the Chapter
+        membership in addition to these Bylaws.
+    \item In the event of a conflict between a policy established by the
+        Executive Board and these Bylaws, these Bylaws shall take precedence.
 \end{enumerate}
 
 \chapter{Meetings}
@@ -205,7 +221,7 @@
         meetings should nominally be open to active members.
         \subitem The Executive Board may move to an executive session containing
         only current officers and the Advisor following a successful motion by
-        an officer. Executive sessions may invite additional people at the
+        an officer. Executive sessions may involve additional people at the
         discretion of the Executive Board.
     \item Notification of Chapter meetings and activities shall be distributed
         to the membership no later than 24 hours prior to the start of the
@@ -232,7 +248,7 @@
         membership by the Executive Board for the two weeks prior to the Annual
         Election Meeting. 
     \item Nominees must either accept or decline their nomination by the start
-        of the Election Meeting.
+        of voting for the position.
     \item In the event that a position receives only one nomination, a
         confidence vote shall be conducted.
 \end{enumerate}
@@ -247,13 +263,13 @@
         former member of the Executive Board who is not otherwise participating
         in the election.
     \item Absentee ballots may be accepted in the form of written communication
-        in the form of an ordered list of names, the word ``abstain'' or ``no
-        confidence'' in descending order for each office. This written
-        communication shall be submitted to the Teller in accordance with
-        \cref{itm:tellers} of this section.
+        of an ordered list of names, the word ``abstain'' or ``no confidence''
+        in descending order for each office. This written communication shall be
+        submitted to the Teller in accordance with \cref{itm:tellers} of this
+        section.
         \subitem If an absentee ballot contains names that have not yet been
         nominated, the Teller shall make a nomination on the absentee's behalf.
-    \item Votes will be counted according to the method of Ranked Choice Voting.
+    \item Votes will be counted according to the method of Instant Runoff Voting.
 \end{enumerate}
 
 \section{Special Elections} \label{sec:specialelections}
