allow for advisor recall

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -285,6 +285,8 @@
     \item The Chapter Advisor shall be selected by the Executive Board with the
         aid of the University and shall be approved by both a 2/3rds majority of
         the voting membership as well as the ACM.
+    \item The Advisor may be recalled by a 2/3rds majority of the voting
+        membership.
     \item The Advisor will not have voting privileges in any matters.
     \item The Advisor will act as a consultant in matters before the Chapter.
     \item The Advisor may attend meetings and activities of the Chapter as seen
